# ddpa_lines_ng

./: README.md  pyproject.toml  requirements.txt
data/curiosities/: .view.md.swp  Makefile  README.md  view.html  view.md
dataset/: line_height.py  metrics.sh  test_500_ds.tsv  test_ds.tsv  train_ds.tsv  val_500_ds.tsv  val_ds.tsv
doc/: evaluation.md
evaluation/2.0/: README.md
libs/: charters_seg.py  line_build.py  line_geometry.py  lineseg_datasets.py  list_utils.py  seg_io.py  seglib.py  segmodel.py  segviz.py  train_utils.py  transforms.py
tests/: test_exports.py
