[project]
name = "ddpa_lines"
version = "2.0"
authors = [
  { name="Nicolas Renet", email="nprenet@gmail.com" },
]
description = "Line detection mini-app."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license="MIT"
license-files=["LICENSE"]

dependencies = [ 
	"torch", 
	"torchvision",
	"numpy",
	"matplotlib",
	"tensorboard",
	"pillow",
	"scikit-image"
	"tormentor",
	"fargv",  ]

[project.urls]
Homepage = "https://github.com/Didip-eu/ddpa_lines_ng"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

